@@ -123,6 +123,8 @@ namespace QuestSystemLUA
 				lua["Quest"] = this;
 				lua["Player"] = this.player;
 				lua["Color"] = new Color();
+				if (this.player.CurQuestRegion != null)
+					lua["Region"] = this.player.CurQuestRegion;
 				
 				lua.RegisterFunction("Add", this, this.GetType().GetMethod("Add"));
 				lua.RegisterFunction("Prioritize", this, this.GetType().GetMethod("Prioritize"));
